fix: Drops last two images

--- a/select_training_data.ipynb
+++ b/select_training_data.ipynb
@@ -178,20 +178,20 @@
     "        'x1': 2021+8,\n",
     "        'y1': 1286+11\n",
     "    },\n",
-    "    {\n",
-    "        'checksum': '97ef263638239355c9448d4c53b73d5f',\n",
-    "        'x0': 1902,\n",
-    "        'y0': 1227,\n",
-    "        'x1': 1902+12,\n",
-    "        'y1': 1227+19\n",
-    "    },\n",
-    "    {\n",
-    "        'checksum': '5e4ad064821097b7a1bfff8c24dc56c3',\n",
-    "        'x0': 2051,\n",
-    "        'y0': 1387,\n",
-    "        'x1': 2051+8,\n",
-    "        'y1': 1387+13\n",
-    "    }\n",
+    "    # {\n",
+    "    #     'checksum': '97ef263638239355c9448d4c53b73d5f',\n",
+    "    #     'x0': 1902,\n",
+    "    #     'y0': 1227,\n",
+    "    #     'x1': 1902+12,\n",
+    "    #     'y1': 1227+19\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'checksum': '5e4ad064821097b7a1bfff8c24dc56c3',\n",
+    "    #     'x0': 2051,\n",
+    "    #     'y0': 1387,\n",
+    "    #     'x1': 2051+8,\n",
+    "    #     'y1': 1387+13\n",
+    "    # }\n",
     "]"
    ]
   },
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
